--- a/src/cgns2h5/CMakeLists.txt
+++ b/src/cgns2h5/CMakeLists.txt
@@ -5,10 +5,10 @@ set(HEADER_DIR ${CMAKE_CURRENT_LIST_DIR}/inc)
 file(GLOB HEADER_FILES ${HEADER_DIR}/*.h)
 
 #include_directories(${HEADER_DIR} ${lib1_INCLUDE_DIRS})
-include_directories(${HEADER_DIR} ${mpiWrap_INCLUDE_DIRS})
+include_directories(${HEADER_DIR})
 
 add_executable(${PROJECT_NAME} ${SRC_FILES} ${HEADER_FILES})
-target_link_libraries(${PROJECT_NAME} mpiWrap)
+target_link_libraries(${PROJECT_NAME} hdf5 hdf5_hl cgns)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "CGNS2H5")
 
