--- a/src/cgns2h5/CMakeLists.txt
+++ b/src/cgns2h5/CMakeLists.txt
@@ -8,7 +8,11 @@ file(GLOB HEADER_FILES ${HEADER_DIR}/*.h)
 include_directories(${HEADER_DIR})
 
 add_executable(${PROJECT_NAME} ${SRC_FILES} ${HEADER_FILES})
-target_link_libraries(${PROJECT_NAME} hdf5 hdf5_hl cgns)
+if (USE_MN5)
+    target_link_libraries(${PROJECT_NAME} HDF5::HDF5 cgns)
+else()
+    target_link_libraries(${PROJECT_NAME} hdf5 hdf5_hl cgns)
+endif()
 
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "CGNS2H5")
 
