--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 
 # Options
-option(USE_MN5 "Compiling in MareNostrum5" ON)
+option(USE_MN5 "Compiling in MareNostrum5" OFF)
 if(USE_MN5)
     message("Linking HDF5 as HDF5::HDF5...")
 endif(USE_MN5)
