--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,10 +1,12 @@
-name: C/C++ CI
+name: C/C++ CMake CI
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+env:
+    BUILD_TYPE: Release
 
 jobs:
   build:
@@ -13,11 +15,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+    - name: configure CMake
+      run: module load hdf5/1.14.4 cgns/4.4.0 && cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -GNinja
+    - name: Ninja Build
+      working-directory: ${{github.workspace}}/build
+      run: ninja
