--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,7 +18,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: configure CMake
-      run: module load hdf5/1.14.4 cgns/4.4.0 && cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -GNinja
+      #run: module load hdf5/1.14.4 cgns/4.4.0 && cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -GNinja
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -GNinja
     - name: Ninja Build
       working-directory: ${{github.workspace}}/build
       run: ninja
