--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,8 +7,6 @@ on:
     branches: [ "main" ]
 env:
     BUILD_TYPE: Release
-    # Use Fish terminal instead of Bash
-    SHELL: /usr/bin/fish
 
 jobs:
   build:
@@ -17,8 +15,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Pre-config the runner
+      run: |
+        source /home/lucas/environment-modules/5.2.0/init/bash
+        module load hdf5/1.14.4 cgns/4.4.0
     - name: configure CMake
-      #run: module load hdf5/1.14.4 cgns/4.4.0 && cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -GNinja
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -GNinja
     - name: Ninja Build
       working-directory: ${{github.workspace}}/build
