--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,6 +7,9 @@ on:
     branches: [ "main" ]
 env:
     BUILD_TYPE: Release
+    run: |
+        source /home/lucas/environment-modules/5.2.0/init/bash
+        module load hdf5/1.14.4 cgns/4.4.0
 
 jobs:
   build:
