--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,9 +7,6 @@ on:
     branches: [ "main" ]
 env:
     BUILD_TYPE: Release
-    run: |
-        source /home/lucas/environment-modules/5.2.0/init/bash
-        module load hdf5/1.14.4 cgns/4.4.0
 
 jobs:
   build:
@@ -25,4 +22,7 @@ jobs:
         cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -GNinja
     - name: Ninja Build
       working-directory: ${{github.workspace}}/build
-      run: ninja
+      run: |
+        source /home/lucas/environment-modules/5.2.0/init/bash
+        module load hdf5/1.14.4 cgns/4.4.0
+        ninja
