--- a/src/cgns2h5/CMakeLists.txt
+++ b/src/cgns2h5/CMakeLists.txt
@@ -8,12 +8,12 @@ file(GLOB HEADER_FILES ${HEADER_DIR}/*.h)
 include_directories(${HEADER_DIR})
 
 add_executable(${PROJECT_NAME} ${SRC_FILES} ${HEADER_FILES})
-if (USE_MN5)
-    target_link_libraries(${PROJECT_NAME} HDF5::HDF5 cgns)
-else()
-    target_link_libraries(${PROJECT_NAME} hdf5 hdf5_hl cgns)
-endif()
+set_property(TARGET ${PROJECT_NAME} PROPERTY LINKER_LANGUAGE CXX)
+set_mpi()
+set_hdf5()
+set_cgns()
 
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "CGNS2H5")
 
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
+install(FILES ${HEADER_FILES} DESTINATION include)
